--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -69,6 +69,11 @@
       "sharedMemory": "Memoria condivisa",
       "sharedPods": "Pod condivisi",
       "sharedEphemeralStorage": "Storage effimero condiviso"
+    },
+    "offloadingStrategy": {
+      "strategyLocalAndRemote": "Locale e remoto",
+      "strategyLocal": "Locale",
+      "strategyRemote": "Remoto"
     }
   },
   "namespaces": {
